<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mHIVE</string>
    <string name="dummy_content">mHIVE</string>
    <string name="waveform_text_sine">Sine</string>
    <string name="waveform_text_square">Square</string>
    <string name="waveform_text_sawup">SawUp</string>
    <string name="waveform_text_triangle">Triangle</string>
    <string name="attack">Attack</string>
    <string name="decay">Decay</string>
    <string name="sustain">Sustain</string>
    <string name="release">Release</string>

</resources>